--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ $RECYCLE.BIN/
 # =========================
 # Operating System Files
 # =========================
+nbproject/private/private.xml
+nbproject/private/private.properties
+nbproject/genfiles.properties
+nbproject/build-impl.xml
